# CA-Embedded-MiniProject

./: .gitignore  README.md  platformio.ini
CAN_CONTROLLER/: CAN_CONTROLLER.ino
CAN_SNIFFER/: CAN_SNIFFER.ino
DUAL_ESP_TEST/DUAL_ESP_Test/: platformio.ini
DUAL_ESP_TEST/DUAL_ESP_Test/src/: main.cpp
comet_bot_ws/install/: local_setup.sh  setup.sh
comet_bot_ws/install/jetson_topic_relay/share/jetson_topic_relay/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
comet_bot_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
comet_bot_ws/install/microxrcedds_client/lib/: libmicroxrcedds_client.so.2.4  libmicroxrcedds_client.so.2.4.2
comet_bot_ws/log/: latest_build  latest_list
comet_bot_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
comet_bot_ws/src/jetson_topic_relay/: package.xml  setup.cfg  setup.py
comet_bot_ws/src/log/: latest_build
comet_bot_ws/src/lunabot_control/: package.xml  setup.cfg  setup.py
comet_bot_ws/src/lunabot_control/lunabot_control/: teleop_publisher.py
cometbot_ws/install/: local_setup.sh  setup.sh
cometbot_ws/log/: latest_build
cometbot_ws/src/cometbot_control/: setup.cfg  setup.py
cometbot_ws/src/install/: local_setup.sh  setup.sh
cometbot_ws/src/log/: latest_build
cometbot_ws/src/robot_control/: CMakeLists.txt
extra_packages/custom_messages/: package.xml
extra_packages/custom_messages/msg/: SparkMaxMessage.msg
install/: local_setup.sh  setup.sh
lib/CAN_Device_Interface/: CAN_Device_Interface.h
lib/CTRE PDP/: PDP.cpp  PDP.h
lib/Comet_CAN_Common/: Comet_CAN_Common.h
lib/Comet_CAN_Helper/: Comet_CAN_Helper.cpp  Comet_CAN_Helper.h
lib/SPARK_MAX/: SPARK_MAX.cpp  SPARK_MAX.h
lib/WPILIB PDP/: PDP.cpp  PDP.h
log/: latest_build
microROS_test/extra_packages/custom_messages/: CMakeLists.txt
microROS_test/extra_packages/my_custom_message/: CMakeLists.txt  package.xml
microROS_test/lib/CAN_Device_Interface/: CAN_Device_Interface.h
microROS_test/lib/Comet_CAN_Common/: Comet_CAN_Common.h
microROS_test/lib/Comet_CAN_Helper/: Comet_CAN_Helper.cpp  Comet_CAN_Helper.h
microROS_test/lib/SPARK_MAX/: SPARK_MAX.cpp  SPARK_MAX.h
microROS_test/src/: main.cpp  temp_testing.txt
src/: main.cpp
(+1155 files in other folders)
