<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_control</name>
  <version>0.0.1</version>
  <description>Control Package for test lunabot</description>
  <maintainer email="amadorjosephg@gmail.com">amadorjosephg</maintainer>
  <license>Apache-2.0</license>
  
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
